# CS6260-a2

./: .gitignore  CMakeLists.txt  Makefile  README.md  a2.pbs  a2_batch.sh  a2_cleanup.sh  a2_otr.pbs  a2_otr_batch.sh  a2_otr_x2_batch.sh  deploy.sh  main.c  main_outer.c  retrieve.sh
